--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@nextui-org/react": "^2.0.30",
+    "bootstrap": "^5.3.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0"
   },
@@ -21,5 +24,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
